# OnLanAsteroids

./: CMakeLists.txt  README.md  config.config
resources/: monospaced_24.fnt
src/: main.cpp
src/engine/: CMakeLists.txt  asteroids_engine.lib  cmake_install.cmake  font.cpp  font.hpp  math.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/game/: game.cpp  game.hpp  imgui.hpp  state_ingame.cpp  state_ingame.h
src/game/TimeMgr/: Time.cpp  Time.h
src/game/network/client/: client.cpp  client.hpp
src/game/network/server/: server.cpp  server.hpp
src/game/network/system/: networking.cpp  networking.hpp  utilsnetwork.cpp  utilsnetwork.hpp
